tests/fixtures/invalid/bool_notin_str.py
# Cannot use 'not in' with Bool and Str
x: bool = True not in "hello"
